test/types/imag/opequals2.2.good
opequals2.chpl:6: error: unresolved call '-=(imag(64), 1.0)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:1909: note: this candidate did not match: -=(lhs: imag(32), rhs: imag(32))
opequals2.chpl:6: note: because actual argument #1 with type 'imag(64)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:1909: note: is passed to formal 'ref lhs: imag(32)'
opequals2.chpl:6: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:1900: note:   -=(lhs: int(8), rhs: int(8))
$CHPL_HOME/modules/internal/ChapelBase.chpl:1900: note:   -=(lhs: int(16), rhs: int(16))
note: and 20 other candidates, use --print-all-candidates to see them
